content/blog/2025-01-01-thin_delegate_aux/tests/ui/auto-delegate/fail_not_supported_associated_const.stderr
error[E0046]: not all trait items implemented, missing: `NAME`
 --> tests/ui/auto-delegate/fail_not_supported_associated_const.rs:1:1
  |
1 | #[auto_delegate::delegate]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `NAME` in implementation
...
4 |     const NAME: &'static str;
  |     ------------------------ `NAME` from trait
  |
  = note: this error originates in the attribute macro `auto_delegate::delegate` (in Nightly builds, run with -Z macro-backtrace for more info)
